--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+
+
+/*-------------------------------- Global / Principal  Styles ------------------------------*/
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,117 +11,246 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.favButton{
-  background-color: rgba(136, 136, 136, 0.116);
-  padding: 10px;
-  border: none;
-  width: 100%;
-  cursor: pointer;
+#app{
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
+.main{
+  min-height: 75vh;
+  padding-bottom: 5vh;
+}
 h1{
   text-align: center;
 }
 
-nav{
-  display: flex;
-  width: 80vw;
-  justify-content: flex-start;
-  padding: 1rem;
+.docImage{
+  max-width: 100%;
+  }
+/*---------------------------- Nav Styles -----------------------*/
+
+
+
+.DH-logo{
+  width: 10em;
 }
 
-a{
-  color: #000;
-  text-decoration: none;
-  margin: 5px;
-  cursor: pointer;
+nav{
+  position: sticky;
+  width: 100vw;
+  top: 0;
+  display:flex;
+  padding: 2vh 0vh 2vh 0vh;
+  justify-content:space-around;
+  top: 0;
 }
-a:hover{
-  color: rgb(136, 136, 136);
-} 
+span{
+  font-weight: 700;
+}
+nav > a{
+  padding: 0.5em;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+}
+
+/*--------------------------- Footer Styles --------------------------*/
 
 footer {
+
   display: flex;
+  flex-direction:row;
   justify-content: center;
   text-align: center;
-  padding: 2rem;
-  position: relative;
+  position: sticky;
   bottom: 0;
-  width: 90%;
+  padding: 1.5vh 0vh 1.5vh 0vh;
+  width:100vw;
   height: 40px;
-  margin-top: 2rem;
 }
 
-footer > img{
-  width: 200px;
-  margin: 0;
-}
 footer > p{
   margin: 0;
   padding-top: 0.7rem;
+}
+
+
+/*--------------------------- Card Styles --------------------------*/
+
+.card{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  width: 15%;
+  padding: 0.5rem 0.5rem 0 0.5rem;
+  border: 2px solid rgb(136, 136, 136);
+  border-radius: 10px;
+}
+
+.card:hover{
+  border: 2px solid rgb(255, 0, 0);
+}
+
+.card > a{
+  padding: 0.5em;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+}
+
+.favButton{
+  align-self:flex-end;
+  
+  padding: 10px;
+  border: none;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 20px;
+  margin-bottom: 5px;
+  background-color:white;
+}
+.favButton-unActive{
+  background: red;
+  color: white;
+}
+
+/*------------------------------ Form Styles -------------------------------*/
+
+.contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 form{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 300px;
-  height: 100px;
-  margin: 0 auto;
+  width: 60vw;
+  height: 59vh;
 }
-
-.card{
+label{
   display: flex;
-  justify-content: space-around;
-  flex-direction: column;
+  flex-direction: column  ;
   align-items: center;
-  width: 200px;
-  padding: 0.5rem 0.5rem 0 0.5rem;
-  border: 0.5px solid rgb(136, 136, 136);
 }
 
-.card:hover{
-  border: 0.5px solid rgb(206, 217, 142);
+.formInput{
+  width: 100%;
+  height: 1.6em;
+  border: 3px solid transparent;
+  margin: 5px;
+  border-radius: 10px;
+  padding-left: 10px;
+  background-color: whitesmoke;
 }
 
+input:focus{
+border-style: dotted;
+border: 3px solid red;
+outline: none;
+}
+form > button{
+  width: 55%;
+  align-self: center;
+  border-radius: 20px;
+  padding: 5px;
+  background-color: red;
+  color: white;
+  border-style: none;
+  font-weight: 600;
+  cursor: pointer;
+}
+form > button:hover {
+  background-color: rgb(156, 45, 45);
+}
+
+.add{
+  display:none;
+  padding: 10px;
+  color: white;
+  background-color: red;
+  width: 33vw;
+  position: fixed; 
+  left: 33vw;
+  text-align: center;
+  align-self: center;
+  border-radius: 20px;
+  }
+/*-------------------- Home Styles --------------------*/
 .card-grid{
   display: flex;
   justify-content: space-evenly;
   gap: 1rem;
-  width: 90vw;
+  width: 90%;
   height: auto;
   flex-wrap: wrap;
   margin: 0 auto;
 }
 
-table {
- border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    display: table;
-    border: 1px solid #ccc;
 
+
+/*------------------ Details Styles ------------------*/ 
+h2{
+  text-align: center;
+}
+h5{
+  text-align: center;
+}
+.details{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.detailsClass{
+  display: flex;
+  flex-direction: column;
+    justify-content: space-around;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+.detailsCard{
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  padding: 0.5rem 0.5rem 0 0.5rem;
+  border: 2px solid rgb(136, 136, 136);
+  border-radius: 10px;
+}
+.detailsCard > img{
+  max-width: 200px;
+}
+.detailsCard:hover{
+  border: 2px solid rgb(255, 0, 0);
+}
+.formContainer{
+  width: 20vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.formContainer > div > .formClass{
+  max-width:250px ;
+}
+/*----------------------- Change Themes Button Styles ------------------*/ 
+.checkbox{
+appearance: none;
+cursor: pointer;
+background-color:transparent;
+width: 2.5em;
+height:2.5em;
+border: 2px solid #888;
+border-radius: 30%;
+}
+.checkbox > img{
+  width: 100%;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
 
-.dark{
-  background-color: #12121296;
-  color: white;
-}
-.dark > a {
-  color: white;
-}
+
+
+
